# OpenPAL3

./: .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  azure-pipelines.yml  index.html  openpal3.toml  pal5_grass_re.md  redo.py  vcpkg.json
launcher/launcher/: CMakeLists.txt  Dialogs.cpp  Dialogs.fbp  Dialogs.h  Main.cpp  OpenPal3Config.hpp  wxSR.hpp
opengb/: Cargo.toml  build.rs
opengb/src/: application.rs  asset_manager.rs  classes.rs  config.rs  lib.rs  material.rs  resource_manager.rs  scripting.rs
opengb/src/cpk/: cpk.rs  cpk_archive.rs  cpk_fs.rs
opengb/src/director/: director.rs  mod.rs  sce_director.rs  sce_state.rs
opengb/src/directors/: adv_director.rs  exp_director.rs  global_state.rs  mod.rs  persistence_state.rs  persistent_state.rs  sce_director.rs  sce_state.rs  sce_vm.rs  shared_state.rs
opengb/src/loaders/: cvd_loader.rs  cvdloader.rs  mod.rs  mv3_loader.rs  mv3loader.rs  nav_loader.rs  pol_loader.rs  polloader.rs  sce_loader.rs  scn_loader.rs  scnloader.rs
opengb/src/scene/: cvd_entity.rs  cvdentity.rs  mod.rs  mv3_entity.rs  mv3entity.rs  pol_entity.rs  pol_model.rs  polentity.rs  role_controller.rs  role_entity.rs  scene.rs
opengb/src/shaders/: lightmap_texture.frag  lightmap_texture.vert
opengb/src/ui/: dlg_box.rs
opengb/src/utilities/: mod.rs  read_ext.rs  store_ext.rs
opengb/src/video/: ffmpeg.rs
openpal3/: Cargo.toml  OpenPAL3.sln  build.rs  log  openpal3.toml
openpal3/Common/: Common.projitems  Common.shproj  Contract.cs  stylecop.json
openpal3/CrossCom/: ClassFactory.cs  ComObject.cs  CrossCom.csproj  ExportObject.cs  IClassFactory.cs  IComObject.cs  IUnknown.cs  IUnknownCcw.cs  IUnknownImportedObject.cs  IUnknownObject.cs  IUnknownRcw.cs  ImportedObject.cs  NativeMethods.cs  ObjectActivator.cs  Unknown.cs
openpal3/CrossCom.CodeGen/: CodeGenerator.cs  CrossCom.CodeGen.csproj  Program.cs  Source.cs.hbt  WrappedType.cs
openpal3/CrossCom/Activators/: CcwActivator.cs  RcwActivator.cs
openpal3/CrossCom/Attributes/: CrossComInterface.cs  CrossComInterfaceImport.cs  CrossComMethod.cs  CrossComObjectImport.cs
openpal3/CrossCom/Metadata/: ImportedInterfaceMetadata.cs  ImportedObjectMetadata.cs  InterfaceMetadata.cs  InterfaceObjectMetadata.cs  RcwTypeMetadata.cs  VirtualMethodMetadata.cs
openpal3/OpenGB.Runtime/: FactoryObject.cs  IFactory.cs  OpenGB.Runtime.csproj
openpal3/OpenGB.Runtime/Config/: CrossCom.config.json  opengb.idl  opengb.json
openpal3/OpenPAL3/: OpenPAL3.csproj  Program.cs  openpal3.toml
openpal3/OpenPAL3/Properties/: launchSettings.json
openpal3/src/: application.rs  debug_layer.rs  main.rs  main_menu_director.rs  sce_proc_hooks.rs
radiance/: Cargo.toml  build.rs
radiance/radiance/: Cargo.toml  LICENSE_RADIANCE  build.rs  features.rs
radiance/radiance/src/: comdef.rs  debug.rs  interfaces.rs  lib.rs  perf.rs
radiance/radiance/tests/: immediate_pump_slot_smoke.rs  scene_update_reentrancy.rs  ui_frame_renderer_slot_smoke.rs
radiance/radiance_editor/: Cargo.toml  build.rs
radiance/radiance_editor/src/: application.rs  comdef.rs  director.rs  lib.rs  main.rs
radiance/radiance_scripting/: Cargo.toml  README.md  build.rs
radiance/radiance_scripting/bindings/: director.p7  ui.p7
radiance/radiance_scripting/scripts/: freeview.p7  ui.p7
radiance/radiance_scripting/src/: command_router.rs  lib.rs  runtime.rs  script_package.rs  script_vfs.rs
radiance/radiance_scripting/tests/: camera_control_smoke.rs  foreign_director_smoke.rs  imgui_pump_smoke_v2.rs  immediate_director_smoke.rs  math_intrinsics_smoke.rs  module_qualified_calls.rs  proto_ccw_director.rs  raycaster_bridge_smoke.rs  recursive_struct.rs  runtime_smoke.rs  script_handle_lifetime.rs  script_package_ypk_roundtrip.rs  scriptable_component_smoke.rs  scripted_director_render_smoke.rs  services_smoke.rs  sibling_module_dispatch.rs  texture_cache_smoke.rs  ui_bindings_compile.rs  ui_frame_renderer_smoke.rs  ui_framework_smoke.rs  ui_host_smoke.rs  ui_latch_smoke.rs  ui_layout_smoke.rs  ui_walker_smoke.rs  welcome_script_compile.rs  wrap_director_smoke.rs
radiance/script-package/: Cargo.toml
radiance/script-package/src/: lib.rs
radiance/src/: constants.rs  interfaces.rs  lib.rs  macros.rs
radiance/src/application/: application.rs  extensions.rs  mod.rs  psp.rs  utils.rs  windows.rs  winit.rs
radiance/src/audio/: mod.rs  null.rs  openal.rs
radiance/src/imgui/: clipboard.rs  mod.rs  windows.rs  winit.rs
radiance/src/input/: engine.rs  gamepad.rs  generic.rs  mod.rs  windows.rs
radiance/src/math/: mat.rs  mod.rs  quaternion.rs  rect.rs  transform.rs  vec.rs
radiance/src/media/: audio.rs  mod.rs  video.rs
radiance/src/radiance/: core_engine.rs  debugging.rs  mod.rs
radiance/src/rendering/: core_engine.rs  engine.rs  factory.rs  material.rs  mod.rs  render_object.rs  rendering_component.rs  shader.rs  sprite.rs  texture.rs  vertex.rs  vertex_buffer.rs  video_player.rs
radiance/src/scene/: camera.rs  director.rs  entity.rs  mod.rs  scene.rs  scene_manager.rs
radiance/src/shaders/: simple_triangle.frag  simple_triangle.vert
radiance/src/ui/: mod.rs
radiance/src/video/: ffmpeg.rs  mod.rs
scripting/: Cargo.toml  build.rs
scripting/src/: application.rs  lib.rs  test.rs
tlbcsgen/: Cargo.toml
tlbcsgen/src/: main.rs
tools/asdebug/: Cargo.toml
tools/asdebug/src/: context.rs  disasm_view.rs  main.rs  server.rs  utils.rs
tools/csb_inspect/: Cargo.toml
tools/dbexp/: Cargo.toml
tools/dev_tools/: Cargo.toml
tools/pal4_gob_inspect/: Cargo.toml
tools/pal4_plot_dump/: Cargo.toml
tools/pol_exporter/: Cargo.toml
tools/radiance_editor/: Cargo.toml
tools/scene_viewer/: Cargo.toml
tools/scn_inspect/: Cargo.toml
yaobow/agent_server/: Cargo.toml
yaobow/common/: Cargo.toml
yaobow/fileformats/: Cargo.toml
yaobow/opengb/: Cargo.toml
yaobow/packfs/: Cargo.toml  features.rs
yaobow/shared/: Cargo.toml  build.rs
yaobow/yaobow/: Cargo.toml  Makefile.toml  build.rs  features.rs
yaobow/yaobow_editor/: Cargo.toml  build.rs  openpal3.toml
yaobow/yaobow_editor_p7/: Cargo.toml
(+1151 files in other folders)
