[workspace]
members = [
    "crosscom/runtime/rust",
    "radiance/radiance",
    "radiance/radiance_editor",
    "yaobow/common",
    "yaobow/fileformats",
    "yaobow/macros",
    "yaobow/shared",
    "yaobow/packfs",
    "yaobow/yaobow",
    "yaobow/yaobow_editor",
    "tools/pol_exporter",
    "tools/asdebug",
    "tools/dbexp",
    "tools/repacker",
]
resolver = "2"

[patch.crates-io]
filetime = { git = "https://github.com/dontpanic92/filetime", branch = "yaobow" }
chlorine = { git = "https://github.com/dontpanic92/chlorine", branch = "yaobow" }
vcpkg = { git = "https://github.com/dontpanic92/vcpkg-rs", branch = "yaobow" }
xxhash-rust = { git = "https://github.com/dontpanic92/xxhash-rust", branch = "yaobow" }
cty = { git = "https://github.com/amazingfate/cty", branch = "loongarch" }

#[patch."https://github.com/dontpanic92/mini-fs"]
#mini-fs = { path = "../mini-fs" }

[profile.release-with-symbol]
inherits = "release"
debug = true

[profile.vita-release]
inherits = "release"
debug = true
# lto = true
