[workspace]
members = [
    "crosscom/ccidl-rs",
    "crosscom/runtime/protosept",
    "crosscom/runtime/rust",
    "radiance/radiance",
    "radiance/radiance_editor",
    "radiance/radiance_scripting",
    "radiance/script-package",
    "radiance/3rdparty/mini-fs",
    "yaobow/agent_server",
    "yaobow/common",
    "yaobow/fileformats",
    "yaobow/macros",
    "yaobow/shared",
    "yaobow/packfs",
    "yaobow/yaobow",
    "yaobow/yaobow_editor",
    "tools/pol_exporter",
    "tools/pal4_plot_dump",
    "tools/pal4_gob_inspect",
    "tools/csb_inspect",
#   "tools/asdebug",
#   "tools/dbexp",
    "tools/repacker",
    "tools/scn_inspect",
]
resolver = "3"

[workspace.dependencies]
imgui = { version = "0.12", features = ["docking", "tables-api"] }
mini-fs = { path = "radiance/3rdparty/mini-fs" }

[patch.crates-io]
filetime = { git = "https://github.com/dontpanic92/filetime", branch = "yaobow" }
chlorine = { git = "https://github.com/dontpanic92/chlorine", branch = "yaobow" }
vcpkg = { git = "https://github.com/dontpanic92/vcpkg-rs", branch = "yaobow" }
xxhash-rust = { git = "https://github.com/dontpanic92/xxhash-rust", branch = "yaobow" }
cty = { git = "https://github.com/amazingfate/cty", branch = "loongarch" }

[profile.release-with-symbol]
inherits = "release"
debug = true

[profile.vita-release]
inherits = "release"
debug = true
# lto = true
