[package]
name = "opengb"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
image = "0.23.0"
dyn-clone = "1.0.1"
radiance = { path = "../../radiance/radiance" } #{ git = "https://github.com/dontpanic92/radiance/" }
encoding = "0.2.33"
imgui = "0.6.1"
downcast-rs = "1.2.0"
config = "0.10.1"
serde = { version = "1.0.106", features = ["derive"] }
log = { version = "0.4.8" }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
memmap = "0.7.0"
minilzo-rs = { git = "https://github.com/dontpanic92/minilzo-rs/" }
