[package]
name = "opengb"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
dirs = "3.0.1"
image = "0.23.0"
dyn-clone = "1.0.1"
radiance = { path = "../radiance" }
encoding = "0.2.33"
imgui = "0.6.1"
downcast-rs = "1.2.0"
config = "0.10.1"
rand = "0.8.3"
rust-ini = "0.16.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.61"
log = { version = "0.4.13" }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
memmap = "0.7.0"
minilzo-rs = { git = "https://github.com/dontpanic92/minilzo-rs/" }
