[package]
name = "openpal3"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.13" }
opengb = { path = "../opengb" }
imgui = "0.6.1"
radiance = { path = "../radiance" }
simple_logger = "1.11.0"
