[package]
name = "openpal3"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.8.0"
opengb = { path = "../opengb" }
radiance = { path = "../radiance" }
simple_logger = "1.16.0"

[dependencies.log]
version = "0.4.14"
features = ["max_level_debug", "release_max_level_debug"]
