[package]
name = "radiance-scripting"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radiance = { path = "../radiance" }
glib = "0.9.2"
glib-sys = "0.9.0"
gobject-sys = "0.9.0"
gobject-gen = { path = "../gnome-class" }
gobject-class = { path = "../gnome-class/gobject-class" }

[features]
# If this feature is enabled, it executes the tests with
# the rust files generated during an earlier run.
test-generated = []

# [target.x86_64-pc-windows-gnu]
# linker = "E:\\msys2\\mingw64\\bin\\gcc.exe"
# ar = "E:\\msys2\\mingw64\\bin\\ar.exe"

[build-dependencies]
vcpkg = "0.2.8"
