[package]
name = "tlbcsgen"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intercom = { git = "https://github.com/Rantanen/intercom" }
libloading = "0.6.1"
strong-xml = "0.5.0"
serde = {version ="1.0.106", features = ["derive"]}
chrono = { version = "0.4.11", features = ["serde"] }
