[package]
name = "radiance"
version = "0.1.0"
authors = ["dontpanic <lishengqiu.hit@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1"
backtrace = "0.3.44"
bitflags = "1.2.1"
cfg-if = "1"
crosscom = { path = "../../crosscom/runtime/rust" }
dashmap = "5.1.0"
downcast-rs = "1.2.0"
hound = "3.4.0"
symphonia = {version = "0.5", features = ["all"] }
image = "0.23.0"
imgui = { version = "0.10", features = ["docking"] }
lazy_static = "1.2.0"
lewton = "0.10.1"
log = "0.4.13"
lru = { version = "0.7.1", features=["nightly"] }
memoffset = "0.9.0"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
radiance-assets = { path = "../radiance-assets" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
uuid = "0.8"

[target.'cfg(not(target_os = "vita"))'.dependencies]
ash = { version = "0.37", default-features = false, features = ["loaded"] }
ash-window = "0.12"
imgui-rs-vulkan-renderer = { git = "https://github.com/dontpanic92/imgui-rs-vulkan-renderer", features = ["vma"] }
imgui-winit-support = { version = "0.10", default-features = false}
gilrs = "0.8.1"
raw-window-handle = "0.5"
vma = "0.3"
winit = "0.27"

[target.'cfg(target_os = "vita")'.dependencies]
imgui-rs-vitagl-renderer = { git = "https://github.com/dontpanic92/imgui-rs-vitagl-renderer" }
# vitagl-sys = { git = "https://github.com/dontpanic92/vitagl-sys" }
vitagl-sys = { path ="../../../vitagl-sys/vitagl-sys"}
vitasdk-sys = { git = "https://github.com/dontpanic92/vitasdk-sys", branch = "yaobow"}

[target.'cfg(not(any(target_os = "android", target_os = "vita")))'.dependencies]
arboard = "2.1"
alto = { git = "https://github.com/dontpanic92/alto", features = ["dynamic"] }

[target.'cfg(any(target_os = "android", target_os = "vita"))'.dependencies]
alto = { git = "https://github.com/dontpanic92/alto", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "errhandlingapi", "windef", "wingdi"] }

[build-dependencies]
cc = "1.0"
cfg_aliases = "0.1.0"
