[package]
name = "radiance"
version = "0.1.0"
authors = ["dontpanic <lishengqiu.hit@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1"
backtrace = "0.3.44"
bitflags = "1.2.1"
cfg-if = "1"
crosscom = { path = "../../crosscom/runtime/rust" }
dashmap = "5.1.0"
downcast-rs = "1.2.0"
hound = "3.4.0"
symphonia = {version = "0.5", features = ["all"] }
image = "0.23.0"
imgui = { workspace = true }
lazy_static = "1.2.0"
lewton = "0.10.1"
log = "0.4.13"
lru = { version = "0.12.5" }
memoffset = "0.9.0"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
p7 = { path = "../p7lang/p7" }
radiance-assets = { path = "../radiance-assets" }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
uuid = "0.8"

[target.'cfg(not(target_os = "vita"))'.dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ash-window = "0.13"
imgui-rs-vulkan-renderer = { version = "1.16", features = ["vk-mem"] }
imgui-winit-support = "0.13"
gilrs = "0.10.10"
raw-window-handle = "0.6"
vk-mem = "0.4"
winit = "0.30"

[target.'cfg(target_os = "vita")'.dependencies]
imgui-rs-vitagl-renderer = { git = "https://github.com/dontpanic92/imgui-rs-vitagl-renderer" }
vitagl-sys = { git = "https://github.com/dontpanic92/vitagl-sys" }
vitasdk-sys = { git = "https://github.com/dontpanic92/vitasdk-sys", branch = "yaobow"}

[target.'cfg(not(any(target_os = "android", target_os = "vita")))'.dependencies]
arboard = "3.4.0"
alto = { git = "https://github.com/dontpanic92/alto", features = ["dynamic"] }

[target.'cfg(any(target_os = "android", target_os = "vita"))'.dependencies]
alto = { git = "https://github.com/dontpanic92/alto", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi", "errhandlingapi", "windef", "wingdi"] }

[build-dependencies]
cc = "1.0"
cfg_aliases = "0.2"
