[package]
name = "radiance_editor"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crosscom = { path = "../../crosscom/runtime/rust" }
imgui = { version = "0.10", features = ["docking"] }
radiance = { path = "../radiance" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
simple_logger = "4"
uuid = "0.8"
