[package]
name = "radiance_scripting"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
crosscom = { path = "../../crosscom/runtime/rust" }
crosscom-protosept = { path = "../../crosscom/runtime/protosept" }
radiance = { path = "../radiance" }
radiance_editor = { path = "../radiance_editor" }
p7 = { path = "../protosept/p7" }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
image = "0.23.0"
imgui = { workspace = true }
log = "0.4"
uuid = "0.8"

[build-dependencies]
crosscom-ccidl = { path = "../../crosscom/ccidl-rs" }
