[package]
name = "asdebug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0"
byteorder = "1.3.4"
common = { path = "../../yaobow/common" }
eframe = "0.22"
env_logger = "0.10"
interprocess = "1.2"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
shared = { path = "../../yaobow/shared" }
packfs = { path = "../../yaobow/packfs" }
