[package]
name = "csb_inspect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../../yaobow/common" }
mini-fs = { workspace = true }
packfs = { path = "../../yaobow/packfs" }
shared = { path = "../../yaobow/shared" }
