[package]
name = "dbexp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
common = { path = "../../yaobow/common" }
shared = { path = "../../yaobow/shared" }
eframe = "0.26.2"
egui_extras = "0.26.2"
env_logger = "0.10"
roxmltree = "0.19.0"
serde_json = "1.0.114"
