[package]
name = "pal4_plot_dump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
common = { path = "../../yaobow/common" }
fileformats = { path = "../../yaobow/fileformats" }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
packfs = { path = "../../yaobow/packfs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../../yaobow/shared" }
