[package]
name = "radiance_editor"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui-sys = { git = "https://github.com/imgui-rs/imgui-rs/", features = ["docking"] }
imgui = { git = "https://github.com/imgui-rs/imgui-rs/", features = ["docking"] }
radiance = { path = "../../radiance" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
simple_logger = "1.16.0"
