[package]
name = "scene_viewer"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opengb = { path = "../../opengb" }
radiance = { path = "../../radiance" }
nfd = { git = "https://github.com/saurvs/nfd-rs.git" }
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
