[package]
name = "common"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2018"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
encoding = "0.2.33"
log = { version = "0.4.13" }
memmap = "0.7.0"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
thiserror = "1.0"
