[package]
name = "fileformats"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2021"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
binrw = "0.11"
thiserror = "1.0"
byteorder = "1.3.4"
common = { path = "../common" }
dashmap = "5.1.0"
encoding = "0.2.33"
half = "2.2"
lazy_static = "1.4"
log = { version = "0.4.13" }
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaobow-macros = { path = "../macros" }
