[package]
name = "packfs"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
default = ["zeroize"]
zeroize = ["cipher/zeroize"]
bcrypt = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
cipher = "0.4.2"
common = { path = "../common" }
encoding = "0.2.33"
fileformats = { path = "../fileformats" }
lazy_static = "1.2.0"
log = { version = "0.4.13" }
lzma-rust2 = "0.15"
md5 = "0.7"
mini-fs = { workspace = true }
minilzo-rs = { git = "https://github.com/dontpanic92/minilzo-rs/" }
miniz_oxide = "0.7"
radiance = { path = "../../radiance/radiance" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tomcrypt-sys = "0.1"
uuid = "0.8"
xtea = { git = "https://github.com/Brekcel/xtea" }
xxtea = "0.2.0"

[target.'cfg(not(target_os = "vita"))'.dependencies]
memmap = "0.7.0"

[build-dependencies]
cfg_aliases = "0.2"
