[package]
name = "shared"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2021"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
common = { path = "../common" }
crosscom = { path = "../../crosscom/runtime/rust" }
encoding = "0.2.33"
fileformats = { path = "../fileformats" }
image = "0.23.0"
lazy_static = "1.2.0"
log = { version = "0.4.13" }
md5 = "0.7"
memmap = "0.7.0"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
minilzo-rs = { git = "https://github.com/dontpanic92/minilzo-rs/" }
miniz_oxide ="0.6"
radiance = { path = "../../radiance/radiance" }
thiserror = "1.0"
wavefront_obj = "5.1.0"
xxtea = "0.2.0"
