[package]
name = "shared"
version = "0.1.0"
authors = ["Li Shengqiu <lishengqiu.hit@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = [ "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
cipher = "0.4.2"
common = { path = "../common" }
config = "0.12.0"
crosscom = { path = "../../crosscom/runtime/rust" }
dashmap = "5.1.0"
dirs = "3.0.1"
dyn-clone = "1.0.1"
encoding = "0.2.33"
fileformats = { path = "../fileformats" }
image = "0.23.0"
imgui = { version = "0.10", features = ["docking"] }
interprocess = "1.2"
lazy_static = "1.2.0"
log = { version = "0.4.13" }
lzma-rs = "0.3.0"
md5 = "0.7"
memmap = "0.7.0"
mini-fs = { git = "https://github.com/dontpanic92/mini-fs/" }
minilzo-rs = { git = "https://github.com/dontpanic92/minilzo-rs/" }
miniz_oxide ="0.6"
rand = "0.8.3"
radiance = { path = "../../radiance/radiance" }
regex = "1.4.5"
rust-ini = "0.16.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tomcrypt-sys = "0.1"
uuid = "0.8"
wavefront_obj = "5.1.0"
xtea = { git = "https://github.com/Brekcel/xtea" }
xxtea = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0"
